// Copyright 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.config.v1;

import "google/protobuf/go_features.proto";

option go_package = "github.com/mcpany/core/proto/config/v1";
option java_outer_classname = "AuthProto";
option features.(pb.go).api_level = API_OPAQUE;

// ===================================================================
// Secret Management
// ===================================================================

// SecretValue represents a value that should be treated as a secret.
// It can be a plain text value, an environment variable, a file path, or content fetched from a remote URL.
message SecretValue {
  oneof value {
    // The raw secret value.
    string plain_text = 1;
    // The name of the environment variable containing the secret.
    string environment_variable = 2;
    // The path to a file containing the secret.
    string file_path = 3;
    // Configuration to fetch the secret from a remote URL.
    RemoteContent remote_content = 4;
    // Configuration to fetch the secret from HashiCorp Vault.
    VaultSecret vault = 5;
    // Configuration to fetch the secret from AWS Secrets Manager.
    AwsSecretManagerSecret aws_secret_manager = 6;
  }
  // Optional: A regex pattern to validate the resolved secret value.
  string validation_regex = 7 [json_name = "validation_regex"];
}

// AwsSecretManagerSecret defines the parameters for fetching a secret from AWS Secrets Manager.
message AwsSecretManagerSecret {
  // The name or ARN of the secret in AWS Secrets Manager.
  string secret_id = 1 [json_name = "secret_id"];
  // Optional: The specific key to extract from the secret's JSON structure.
  string json_key = 2 [json_name = "json_key"];
  // Optional: The version stage of the secret (defaults to "AWSCURRENT").
  string version_stage = 3 [json_name = "version_stage"];
  // Optional: The unique identifier of the version of the secret.
  string version_id = 4 [json_name = "version_id"];
  // Optional: The AWS region. If not set, uses the environment or profile configuration.
  string region = 5 [json_name = "region"];
  // Optional: The AWS profile to use for credentials.
  string profile = 6 [json_name = "profile"];
}

// VaultSecret defines the parameters for fetching a secret from HashiCorp Vault.
message VaultSecret {
  // The address of the Vault server (e.g., "https://vault.example.com").
  string address = 1;
  // The token used to authenticate with Vault.
  SecretValue token = 2;
  // The path to the secret in Vault (e.g., "secret/data/my-app/db").
  string path = 3;
  // The key of the secret to retrieve from the path.
  string key = 4;
}

// RemoteContent represents content that is fetched from a remote URL.
message RemoteContent {
  // The HTTP URL to fetch content from.
  string http_url = 1;
  // Authentication configuration for the request.
  Authentication auth = 2;
}

// ===================================================================
// Authentication
// ===================================================================

// Authentication defines an authentication method that can be used for both
// incoming requests (validation) and outgoing requests (client credentials).
message Authentication {
  oneof auth_method {
    // Authentication using an API Key.
    APIKeyAuth api_key = 1 [json_name = "api_key"];
    // Authentication using a Bearer Token.
    BearerTokenAuth bearer_token = 2 [json_name = "bearer_token"];
    // Authentication using Basic Auth (username/password).
    BasicAuth basic_auth = 3 [json_name = "basic_auth"];
    // Authentication using OAuth 2.0.
    OAuth2Auth oauth2 = 4 [json_name = "oauth2"];
    // Authentication using OpenID Connect (OIDC).
    OIDCAuth oidc = 5 [json_name = "oidc"];
    // Authentication using Mutual TLS (mTLS).
    MTLSAuth mtls = 6 [json_name = "mtls"];
    // Authentication based on a trusted header.
    TrustedHeaderAuth trusted_header = 7 [json_name = "trusted_header"];
  }
}

// APIKeyAuth defines authentication using an API key.
message APIKeyAuth {
  // The name of the parameter carrying the key (e.g., "X-API-Key", "api_key").
  string param_name = 1 [json_name = "param_name"];
  // Where the API key is located in the request.
  enum Location {
    HEADER = 0;
    QUERY = 1;
    COOKIE = 2;
  }
  // The location of the API key (HEADER, QUERY, or COOKIE).
  Location in = 2 [json_name = "in"];
  // The API key value. Used for client authentication (outgoing requests).
  SecretValue value = 3 [json_name = "value"];
  // The expected API key value. Used for server validation (incoming requests).
  // This is a plain string because it is compared directly.
  string verification_value = 4 [json_name = "verification_value"];
}

// BearerTokenAuth defines authentication using a bearer token.
message BearerTokenAuth {
  // The bearer token value.
  SecretValue token = 1 [json_name = "token"];
}

// BasicAuth defines authentication using a username and password.
message BasicAuth {
  // The username.
  string username = 1 [json_name = "username"];
  // The password. Used for client authentication (outgoing).
  SecretValue password = 2 [json_name = "password"];
  // The bcrypt hash of the password. Used for server validation (incoming).
  string password_hash = 3 [json_name = "password_hash"];
}

// OAuth2Auth defines authentication using the OAuth 2.0 client credentials flow.
message OAuth2Auth {
  // The URL to retrieve the token from.
  string token_url = 1 [json_name = "token_url"];
  // The client ID.
  SecretValue client_id = 2 [json_name = "client_id"];
  // The client secret.
  SecretValue client_secret = 3 [json_name = "client_secret"];
  // A space-delimited list of requested scopes.
  string scopes = 4 [json_name = "scopes"];
  // The issuer URL for validation/discovery.
  string issuer_url = 5 [json_name = "issuer_url"];
  // The audience for validation.
  string audience = 6 [json_name = "audience"];
  // The authorization URL (optional, mainly for 3-legged flows).
  string authorization_url = 7 [json_name = "authorization_url"];
}

// OIDCAuth defines authentication using OpenID Connect.
message OIDCAuth {
  // The issuer URL of the OIDC provider.
  string issuer = 1 [json_name = "issuer"];
  // The expected subject (sub) claim to validate (incoming).
  string subject = 2 [json_name = "subject"];
  // The expected email claim to validate (incoming).
  string email = 3 [json_name = "email"];
  // The expected audience (aud) claim to validate (incoming).
  repeated string audience = 4 [json_name = "audience"];
}

// MTLSAuth defines authentication using mutual TLS.
message MTLSAuth {
  // The path to the client certificate file.
  string client_cert_path = 1 [json_name = "client_cert_path"];
  // The path to the client private key file.
  string client_key_path = 2 [json_name = "client_key_path"];
  // The path to the CA certificate file used to verify the server's certificate.
  string ca_cert_path = 3 [json_name = "ca_cert_path"];
}

// TrustedHeaderAuth defines authentication using a trusted header.
message TrustedHeaderAuth {
  // The name of the header to check.
  string header_name = 1 [json_name = "header_name"];
  // The expected value of the header.
  string header_value = 2 [json_name = "header_value"];
}

// UserToken represents an OAuth2 token stored for a user.
message UserToken {
  // The ID of the user who owns this token.
  string user_id = 1 [json_name = "user_id"];
  // The ID of the service this token is associated with.
  string service_id = 2 [json_name = "service_id"];
  // The access token string.
  string access_token = 3 [json_name = "access_token"];
  // The refresh token string (if available).
  string refresh_token = 4 [json_name = "refresh_token"];
  // The type of the token (e.g., "Bearer").
  string token_type = 5 [json_name = "token_type"];
  // The expiry time of the token (RFC3339 format).
  string expiry = 6 [json_name = "expiry"];
  // The scopes associated with the token.
  string scope = 7 [json_name = "scope"];
  // The timestamp when the token was last created or updated (RFC3339 format).
  string updated_at = 8 [json_name = "updated_at"];
  // The email address associated with the token (if available).
  string email = 9 [json_name = "email"];
}

// Credential represents a reusable authentication configuration.
message Credential {
  // The unique identifier for the credential.
  string id = 1;
  // A human-readable name for the credential (e.g. "My GitHub Personal").
  string name = 2;

  // The authentication details.
  Authentication authentication = 3;

  // Optional: The persisted session/token for interactive OAuth.
  // This allows the system to reuse the credential by refreshing the token.
  UserToken token = 4;
}
